# rag

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: README.md
docs/: README.md  stage0_naive_rag.md  stage1_hybrid_search.md
scripts/: README.md  ingest_sample_data.py  run_benchmark.py
src/whatisrag/: __init__.py
src/whatisrag/api/: README.md
src/whatisrag/core/: README.md  __init__.py  config.py  interfaces.py  schema.py
src/whatisrag/embedding/: README.md  __init__.py  openai_embedder.py
src/whatisrag/evaluation/: README.md
src/whatisrag/graph/: README.md
src/whatisrag/ingestion/: README.md  __init__.py  chunker.py  indexer.py  loader.py
src/whatisrag/pipeline/: README.md  __init__.py  base_pipeline.py  naive_pipeline.py
src/whatisrag/reranking/: README.md
src/whatisrag/retrieval/: README.md
tests/: README.md
tests/unit/: test_schema.py
