[tool.poetry]
name = "whatisrag"
version = "0.1.0"
description = "Big Tech-grade RAG system built step by step"
authors = []
packages = [{include = "whatisrag", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Core LLM / Orchestration
langchain = "^0.3"
langchain-openai = "^0.3"
langchain-community = "^0.3"
langgraph = "^0.2"
openai = "^1.0"

# Data validation
pydantic = "^2.0"
pydantic-settings = "^2.0"

# Vector Store
qdrant-client = "^1.11"

# Embedding — BGE-M3 dense + sparse
FlagEmbedding = "^1.2"
fastembed = "^0.4"

# Reranking (Stage 2)
sentence-transformers = "^3.0"

# Evaluation (Stage 3)
ragas = "^0.2"
datasets = "^3.0"

# Serving
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}

# Utility
python-dotenv = "^1.0"
loguru = "^0.7"
rich = "^13.0"
httpx = "^0.27"

# Document loading
pypdf = "^5.0"
unstructured = {extras = ["pdf"], version = "^0.16", optional = true}

[tool.poetry.extras]
unstructured = ["unstructured"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
ipykernel = "^6.0"
notebook = "^7.0"
pandas = "^2.0"
matplotlib = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
